--- a/resources/js/Language/en/globalNavigator.json
+++ b/resources/js/Language/en/globalNavigator.json
@@ -26,5 +26,8 @@
     "calibrations": "Calibrations",
     "globalSettings": "Global Settings",
     "rolesAndPermissions": "Roles & Permissions",
+    "roles": "Roles",
+    "permissions": "Permissions",
+    "permissionGroups": "Permission Groups",
     "noResults": "No results found, please try again with different keywords."
 }
